# lingualearn-system-v2

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  alembic.ini  electron-builder.yml  package.json  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.cfg  setup.py  test_api.py  test_simple.py  tox.ini
.github/workflows/: ci.yml  test.yml
backend/: object_detection.py  requirements.txt  server.py
docs/: PROJECT_STATUS.md  installation.md  project-status.md  troubleshooting.md
migrations/: env.py
migrations/versions/: 001_initial.py
public/: index.html  manifest.json
src/: App.js
src/backend/: database.py  main.py  schemas.py
src/backend/docs/: openapi.yaml
src/components/ui/: button.jsx
src/lingualearn/: __init__.py  camera_interface.py  classroom.py  enhanced_object_learning.py  knowledge_base.py  learning_engine.py  object_learning.py  pattern_recognition.py  sam_integration.py  streaming.py  translation.py  voice_input.py
src/lingualearn/api/: bridge.py
src/lingualearn/services/: websocket.js
src/lingualearn/ui/: CameraView.jsx  LinguaLearnApp.jsx  ObjectLearningView.jsx
src/main/: index.js  preload.js
src/python/: object_detection.py  server.py
tests/: __init__.py  conftest.py  test_api.py  test_basic.py  test_classroom.py  test_database.py  test_object_recognition.py  test_streaming.py  test_translation.py
