[metadata]
name = lingualearn
version = 0.1.0
description = Real-time translation system for South African classrooms

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=6.0.0
    pytest-asyncio>=0.15.0
    pytest-cov>=2.12.0
    flake8>=3.9.0
    black>=21.0
    isort>=5.9.0
    mypy>=0.910

[flake8]
max-line-length = 127
extend-ignore = E203
max-complexity = 10
